--- a/signUp.html
+++ b/signUp.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <form id="contact" action="" method="post">
-        <h3>Sign Up</h3>
+        <a href="/index.html">One Pirate</a>
         <fieldset>
           <input
             placeholder="Username"
