--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section  id="offers">
       <div>
         <div class="offers-container">
-            <form class="input-container" action="https://formsubmit.co/ngeorgiev89@outlook.com" method="POST">
+            <form class="input-container" action="https://formsubmit.co/n.g.georgiev89@gmail.com" method="POST">
               <h2>Recieve Offers</h2>
               <p>Taste the holidays of the every close to home.</p>
               <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
