--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>One Pirat</title>
+    <title>Travel</title>
     <script defer src="./js/index.js"></script>
   </head>
   <body>
     <header>
-      <a href="#">OnePirat</a>
+      <a href="#">Travel</a>
       <div class="signs">
         <a href="./signIn.html" class="sign-in">Sign In</a>
         <a href="./signUp.html" class="sign-up">Sign Up</a>
@@ -201,8 +201,8 @@
 
     <footer>
       <div>
-        <h3>OnePirate</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, fugiat! Voluptates mollitia vero fugit numquam!</p>
+        <h3>Travel</h3>
+        <p>Discover new horizons!</p>
         <ul>
              <li><a href="#"><img class="pic" src="./images/facebook.svg" alt=""></a></li>
              <li><a href="#"><img class="pic" src="./images/twitter.svg" alt=""></a></li>
@@ -211,7 +211,7 @@
  
       </div>
       <div class="fb">
-        <p>copyright &copy;2021 OnePirat. designed by <span>ng</span></p>
+        <p>copyright &copy;2021 Travel. designed by <span>ng</span></p>
       </div>
     </footer>
   </body>
