--- a/signIn.html
+++ b/signIn.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/css/loginForms.css" />
     <script defer src="./js/loginForms.js"></script>
 
-    <title>Sign Up</title>
+    <title>Sign In</title>
   </head>
   <body>
     <div class="container">
       <form id="contact" action="" method="post">
-        <a href="/index.html">One Pirate</a>
+        <a href="/index.html">Travel</a>
         <fieldset>
           <input
             placeholder="Username"
